# Fota

./: .gitignore  README.md
app/: CMakeLists.txt  app.ioc  app.ld
app/Core/Inc/: main.h  stm32l4xx_hal_conf.h
app/Core/Src/: main.c  system_stm32l4xx.c
app/cmake/: gcc-arm-none-eabi.cmake
app/cmake/stm32cubemx/: CMakeLists.txt
bootloader/: .mxproject  CMakeLists.txt  bootloader.drawio  bootloader.ioc  bootloader.ld
bootloader/Core/Inc/: aes.h  bl_packet_responder.h  bootloader.h  bootloader_cmds.h  bootloader_fsm.h  comms.h  crc.h  main.h  sm_common.h  stm32l4xx_hal_conf.h
bootloader/Core/Src/: bootloader.c  bootloader_cmds.c  bootloader_fsm.c  comms.c  crc.c  main.c  packet_controller.c  sm_common.c  tim.c  usart.c
bootloader/cmake/: gcc-arm-none-eabi.cmake
bootloader/cmake/stm32cubemx/: CMakeLists.txt
bootloader/util/: cmd_line.py  fw-signer.py  serial_monitor.py
bootloader/util/bl_monitor/: __init__.py  command.py  command_creator.py  crc_calculator.py  packet_parser.py
bootloader/util/bl_monitor/commands/: command_erase_flash.py  command_fw_send_bin_in_packets.py  command_fw_update_sync.py  command_fw_verify_device_id.py  command_get_app_version.py  command_get_bootloader_version.py  command_get_chip_id.py  command_get_help.py  command_get_rdp_level.py  command_jump_to_address.py  command_retransmit.py
common/: memory_map.ld
common/Inc/: common_defines.h  flash.h  fota_api.h  is_ringbuffer.h  msg_printer.h  versions.h
common/Src/: fota_api.c  msg_printer.c
cortex-m4/: README.md
cortex-m4/app/: CMakeLists.txt
cortex-m4/app/Core/Inc/: main.h
cortex-m4/app/Core/Src/: crc.c  info.c  main.c
cortex-m4/bootloader/: .mxproject  bootloader.ioc
cortex-m4/bootloader/Core/Inc/: aes.h  bl_serrif.h  bootloader.h  bootloader_cmds.h  bootloader_fsm.h  comms.h  crc.h  main.h  packet_controller.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tim.h  usart.h
cortex-m4/bootloader/Core/Src/: aes.c  bl_packet_responder.c  bootloader.c  bootloader_cmds.c  bootloader_fsm.c  comms.c  crc.c  main.c  stm32l4xx_it.c  tim.c  usart.c
cortex-m4/bootloader/cmake/stm32cubemx/: CMakeLists.txt
cortex-m4/bootloader/util/: fw-signer.py  pad_bootloader.py  serial_monitor.py
cortex-m4/bootloader/util/bl_monitor/: command.py  packet_parser.py
cortex-m4/bootloader/util/bl_monitor/commands/: command_fw_send_bin_size.py  command_get_app_version.py  command_get_bootloader_version.py  command_get_chip_id.py  command_get_rdp_level.py  command_jump_to_address.py  command_retransmit.py
cortex-m4/common/Inc/: flash.h
cortex-m4/common/Src/: is_ringbuffer.c
transport/: Dockerfile.ca-gen  Dockerfile.esp-idf  docker-compose.yaml  pyproject.toml
transport/.devcontainer/: devcontainer.json
transport/images/: esp32-s3-devkit-c-breadboard.fzz  esp32-s3-devkit-c-led.fzz  xiao-esp32-s3-breadboard.fzz  xiao-esp32-s3-led.fzz
transport/scripts/ca/: entrypoint.sh
transport/scripts/esp-idf/: c_cpp_properties.json  ca.crt  ca.key  entrypoint.sh  esp-idf.code-workspace  generate_mosquitto_password.sh  mosquitto.conf  openssl.cnf
transport/workspace/apps/fota-tranport/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
transport/workspace/apps/fota-tranport/main/: CMakeLists.txt  main.cpp
transport/workspace/components/ethernet_qemu/: CMakeLists.txt  Kconfig  ethernet_qemu.c
transport/workspace/components/ethernet_qemu/include/: ethernet_qemu.h
transport/workspace/components/fota/: CMakeLists.txt  Kconfig
transport/workspace/components/fota/include/: command.hpp  common-defines.hpp  fota.hpp  fsm.hpp  packet.hpp
transport/workspace/components/fota/src/: command.cpp  fota.cpp  packet.cpp
transport/workspace/components/network_wrapper/: CMakeLists.txt  Kconfig  network_wrapper.c
transport/workspace/components/network_wrapper/include/: network_wrapper.h
transport/workspace/components/say_hello/: CMakeLists.txt  Kconfig  say_hello.c
transport/workspace/components/wifi_sta/: CMakeLists.txt  Kconfig  wifi_sta.c
transport/workspace/components/wifi_sta/include/: wifi_sta.h
